# cssr4africa

./: README.md
cssr_system/: CMakeLists.txt  package.xml  reset_pepper_head.py
cssr_system/arucoLocalization/: CMakeLists.txt  ReadMe.md
cssr_system/arucoLocalization/config/: aruco_params.yaml  camera_calibration.yaml  landmarks.yaml  markers.yaml
cssr_system/arucoLocalization/launch/: aruco_localization.launch
cssr_system/arucoLocalization/src/: arucoLocalizationImplementation.cpp  markerVisualizer.cpp
cssr_system/exampleComponent/: CMakeLists.txt  README.md
cssr_system/exampleComponent/config/: exampleComponentConfiguration.ini
cssr_system/exampleComponent/include/exampleComponent/: exampleComponentInterface.h
cssr_system/launch/: cssrSystemLaunchRobot.launch
cssr_system/pepperLocalization/: CMakeLists.txt
cssr_system/pepperLocalization/config/: landmarks.yaml
cssr_system/pepperLocalization/include/pepperLocalization/: pepperLocalizationInterface.h
cssr_system/pepperLocalization/launch/: pepperLocalizationLaunchRobot.launch
cssr_system/pepperLocalization/src/: pepperLocalizationImplementation.cpp
cssr_system/robotLocalization/: CMakeLists.txt  ReadMe.md
cssr_system/robotLocalization/config/: camera_info.json  landmarks.yaml  robotLocalizationConfiguration.json
cssr_system/robotLocalization/data/: landmarks.json
cssr_system/robotLocalization/include/robotLocalization/: robotLocalizationInterface.h
cssr_system/robotLocalization/launch/: robotLocalizationLaunchRobot.launch
cssr_system/robotLocalization/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp
cssr_system/robotLocalizationTest/: CMakeLists.txt  ReadMe.md
cssr_system/robotLocalizationTest/config/: robotLocalizationTestConfiguration.ini  robotLocalizationTestConfiguration.json  test_landmarks.yaml
cssr_system/robotLocalizationTest/include/robotLocalizationTest/: robotLocalizationInterface.h  robotLocalizationTestInterface.h
cssr_system/robotLocalizationTest/launch/: robotLocalizationLaunchRobot.launch  robotLocalizationLaunchSimulator.launch  robotLocalizationLaunchTestHarness.launch  robotLocalizationTestLaunchHarness.launch  robotLocalizationTestLaunchRobot.launch  robotLocalizationTestLaunchSimulator.launch
cssr_system/robotLocalizationTest/src/: robotLocalizationApplication.cpp  robotLocalizationImplementation.cpp  robotLocalizationTestApplication.cpp  robotLocalizationTestImplementation.cpp
cssr_system/robotNavigation/: CMakeLists.txt  CMakeListsOLd.txt  README.md  ReadMe.md
cssr_system/robotNavigation/config/: robotNavigationConfiguration.ini
cssr_system/robotNavigation/data/: parameters230 test.txt  parameters230.txt  workingParams.txt
cssr_system/robotNavigation/include/robotNavigation/: robotNavigationInterface.h
cssr_system/robotNavigation/include/robot_navigation/: moveTo.h  robotNavigationInterface.h
cssr_system/robotNavigation/src/: robotNavigationApplication.cpp  robotNavigationImplementation.cpp  testCode.cpp
cssr_system/robotNavigationTest/: README.md
cssr_system/robotNavigationTest/include/robotNavigationTest/: robotNavigationTestInterface.h
cssr_system/robotNavigationTest/launch/: robotNavigationLaunchTestRobot.launch
cssr_system/robotNavigationTest/src/: robotNavigationDriver.cpp  robotNavigationTestApplication.cpp  robotNavigationTestImplementation.cpp
pepper_interface_tests/launch/: actuatorTestLaunchRobot.launch  sensorTestLaunchRobot.launch
unit_tests/: CMakeLists.txt  package.xml
unit_tests/robotLocalizationTest/: ReadMe.md
unit_tests/robotLocalizationTest/include/robotLocalizationTest/: robotLocalizationTestInterface.h
unit_tests/robotLocalizationTest/launch/: robotLocalizationTestLaunchHarness.launch
unit_tests/robotLocalizationTest/src/: robotLocalizationTestImplementation.cpp
