
# ## Declare a C++ executable
# add_executable(exampleComponent src/exampleComponentApplication.cpp src/exampleComponentImplementation.cpp)
# set_target_properties(exampleComponent PROPERTIES OUTPUT_NAME exampleComponent PREFIX "")
# target_link_libraries(exampleComponent ${catkin_LIBRARIES})
# target_include_directories(exampleComponent PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include ${catkin_INCLUDE_DIRS})
# add_dependencies(exampleComponent ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})